# orseg

./: README.md  pyproject.toml
src/orseg/: _widget.py  napari.yaml
